2004-12-15  Zoltan Varga  <vargaz@freemail.hu>

	* object-internals.h (MonoThread): Change culture_info and 
	ui_culture_info into an array.

	* threads.c: Cache culture info objects from more than one appdomain.

	* threads.c threads-types.h icall.c: Add icalls for manipulating the 
	current UI culture.

2004-12-14  Zoltan Varga  <vargaz@freemail.hu>

	* threads.h threads.c appdomain.c: Clear the culture_info field of
	all threads during unloading if they point to an object in the dying
	appdomain.

2004-12-13  Ben Maurer  <bmaurer@ximian.com>

	* culture-info.h (TextInfoEntry): New struct
	* object-internals.h: sync with managed
	* locales.c: fill the `text_info_data' field
	* culture-info-tables.h: update

Mon Dec 13 18:10:50 CET 2004 Paolo Molaro <lupus@ximian.com>

	* Makefile.am, monodiet.c: add monodiet, an IL code garbage
	collector.

2004-12-12  Ben Maurer  <bmaurer@ximian.com>

	* icall.c (ves_icall_ModuleBuilder_getToken): Check for null
	(ves_icall_ModuleBuilder_getMethodToken): Ditto

2004-12-12  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.c (write_type): If we're an enum and the
	builtin types have already been initialized, call mono_class_init().

2004-12-11  Martin Baulig  <martin@ximian.com>

	* metadata.c (mono_metadata_load_generic_params): Added
	`MonoGenericContainer *parent_container' argument; automatically
	compute `container->is_method'; pass the correct owner to
	get_constraints().	

	* reflection.c (compare_genericparam): Sort the GenericParam table
	according to increasing owners.	

Fri Dec 10 18:43:46 CET 2004 Paolo Molaro <lupus@ximian.com>

	* profiler.c: allow disabling the default profiler.

Fri Dec 10 18:42:11 CET 2004 Paolo Molaro <lupus@ximian.com>

	* decimal.c, icall.c: allow disabling System.Decimal support.

2004-12-09  Marek Safar <marek.safar@seznam.cz>

	* reflection.c: Add support for null attribute arguments.

2004-12-09  Martin Baulig  <martin@ximian.com>
